Cleanup and refactor

--- a/.env
+++ b/.env
@@ -1,10 +1,9 @@
-REDIS_URL=redis://redis:6379/0
-RACK_ENV='development'
-POSTGRES_HOST='postgres'
-POSTGRES_USER='wreeto_admin'
-POSTGRES_PASSWORD='wreeto_password'
-POSTGRES_DB='wreeto_dev'
-REDIS_URL='redis=//redis=6379'
+REDIS_HOST=redis
+RACK_ENV=development
+POSTGRES_HOST=postgres
+POSTGRES_USER=wreeto_admin
+POSTGRES_PASSWORD=wreeto_password
+POSTGRES_DB=wreeto_dev
 OAUTH_GOOGLE_ID=
 OAUTH_GOOGLE_SECRET=
 RECAPTCHA_SITE_KEY=
