--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,18 +2,15 @@ version: '3.7'
 services:
   postgres:
     image: postgres:11
-    environment:
-      - POSTGRES_USER=wreeto_admin
-      - POSTGRES_PASSWORD=wreeto_password
-      - POSTGRES_DB=wreeto_dev
+    env_file: .env
     ports:
       - 5433:5432
     volumes:
     - ~/.volume-data/wreeto/postgres-data:/var/lib/postgresql/data
   app:
-    build: .
-    entrypoint: ["./docker-entrypoint.sh"]
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails server -p 8383 -b 0.0.0.0"
+    build:
+      context: . 
+      dockerfile: Dockerfile
     volumes:
       - .:/app/wreeto
       - ./public/assets:/app/wreeto/public/assets
@@ -22,39 +19,24 @@ services:
     depends_on:
       - postgres
       - redis
+    env_file: .env
     environment:
       RAILS_ENV: 'development'
-      RACK_ENV: 'development'
-      POSTGRES_HOST: postgres
-      POSTGRES_USER: wreeto_admin
-      POSTGRES_PASSWORD: wreeto_password
-      POSTGRES_DB: wreeto_dev
-      REDIS_URL: 'redis://redis:6379'
-      OAUTH_GOOGLE_ID: 
-      OAUTH_GOOGLE_SECRET: 
-      RECAPTCHA_SITE_KEY:
-      RECAPTCHA_SECRET_KEY:
-      SMTP_USERNAME:
-      SMTP_PASSWORD:
   redis:
-    image: redis
+    image: redis:5.0.7
     ports:
       - 6380:6379
   sidekiq:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
+      - app
       - postgres
       - redis
-    command: bundle exec sidekiq -C ./config/sidekiq.yml
     volumes:
       - .:/app/wreeto
-    # env_file:
-    #   - '.env'
+    env_file: .env
     environment:
       RAILS_ENV: 'development'
-      RACK_ENV: 'development'
-      POSTGRES_USER: 'wreeto_admin'
-      POSTGRES_PASSWORD: 'wreeto_password'
-      POSTGRES_DB: 'wreeto_dev'
-      POSTGRES_HOST: 'postgres'
-      REDIS_URL: 'redis://redis:6379'
+    entrypoint: ./sidekiq-entrypoint.sh
