--- a/.env.development.local
+++ b/.env.development.local
@@ -1,1 +1,12 @@
-REDIS_URL=redis://redis:6379/0
+REDIS_HOST=redis
+RACK_ENV=development
+POSTGRES_HOST=postgres
+POSTGRES_USER=wreeto_admin
+POSTGRES_PASSWORD=wreeto_password
+POSTGRES_DB=wreeto_dev
+OAUTH_GOOGLE_ID=
+OAUTH_GOOGLE_SECRET=
+RECAPTCHA_SITE_KEY=
+RECAPTCHA_SECRET_KEY=
+SMTP_USERNAME=
+SMTP_PASSWORD=
