Fix an issue with seeds loading

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,7 @@ services:
     build:
       context: . 
       dockerfile: Dockerfile
+    command: foreman start 
     volumes:
       - .:/app/wreeto
       - ./public/assets:/app/wreeto/public/assets
