Fix an issue with seeds loading #2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     - ~/.volume-data/wreeto/postgres-data:/var/lib/postgresql/data
   app:
     image: chrisvel/wreeto:latest
+    command: foreman start 
     volumes:
       - .:/app/wreeto
       - ./public/assets:/app/wreeto/public/assets
