Setup custom domain and port

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,12 +1,17 @@
-REDIS_HOST=redis
-RACK_ENV=development
+OAUTH_GOOGLE_ID=
+OAUTH_GOOGLE_SECRET=
 POSTGRES_HOST=postgres
 POSTGRES_USER=wreeto_admin
 POSTGRES_PASSWORD=wreeto_password
 POSTGRES_DB=wreeto_dev
-OAUTH_GOOGLE_ID=
-OAUTH_GOOGLE_SECRET=
+POSTGRES_PORT=5432
+RACK_ENV=development
+RAILS_ENV=development
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
+REDIS_HOST=redis
+REDIS_PASSWORD=
 SMTP_USERNAME=
 SMTP_PASSWORD=
+WREETO_HOST=localhost
+WREETO_PORT=8383
