Cleanup and add validation

--- a/test/fixtures/notes.yml
+++ b/test/fixtures/notes.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+something:
+  title: 'Something'
+  content: 'This is something'
+  category: ideas
+  type: Inventory::Note
+  category: ideas
+  user: jack_sparrow
+  guid: <%= SecureRandom.hex(6) %>
