--- a/test/fixtures/taggings.yml
+++ b/test/fixtures/taggings.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  inventory_item: one
-  tag: one
+  note: one
+  tag: first
 
 two:
-  inventory_item: two
-  tag: two
+  note: two
+  tag: second
