--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+first:
+  name: 'First'
 
-two:
-  name: MyString
+second:
+  name: 'Second'
