--- a/.env.development.local
+++ b/.env.development.local
@@ -3,7 +3,7 @@ OAUTH_GOOGLE_SECRET=
 POSTGRES_HOST=postgres
 POSTGRES_USER=wreeto_admin
 POSTGRES_PASSWORD=wreeto_password
-POSTGRES_DB=wreeto_dev
+POSTGRES_DB=wreeto_db
 POSTGRES_PORT=5432
 RACK_ENV=development
 RAILS_ENV=development
@@ -13,5 +13,5 @@ REDIS_HOST=redis
 REDIS_PASSWORD=
 SMTP_USERNAME=
 SMTP_PASSWORD=
-WREETO_HOST=localhost
+WREETO_DOMAIN=localhost
 WREETO_PORT=8383
