fixup! Setup for production

--- a/.env.development.local
+++ b/.env.development.local
@@ -13,5 +13,5 @@ REDIS_HOST=redis
 REDIS_PASSWORD=
 SMTP_USERNAME=
 SMTP_PASSWORD=
-WREETO_DOMAIN=localhost
+WREETO_HOST=localhost
 WREETO_PORT=8383
