--- a/.env.development.local
+++ b/.env.development.local
@@ -5,8 +5,8 @@ POSTGRES_USER=wreeto_admin
 POSTGRES_PASSWORD=wreeto_password
 POSTGRES_DB=wreeto_db
 POSTGRES_PORT=5432
-RACK_ENV=development
-RAILS_ENV=development
+RACK_ENV=production
+RAILS_ENV=production
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 REDIS_HOST=redis
