Set up new category view

--- a/.env.development.local
+++ b/.env.development.local
@@ -7,6 +7,7 @@ POSTGRES_DB=wreeto_db
 POSTGRES_PORT=5432
 RACK_ENV=production
 RAILS_ENV=production
+RECAPTCHA_ENABLED=no
 RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 REDIS_HOST=redis
