Pre-setup rails master key

--- a/.env copy
+++ b/.env copy
@@ -1,7 +1,7 @@
 POSTGRES_HOST=postgres
 POSTGRES_USER=wreeto_admin
 POSTGRES_PASSWORD=wreeto_password
-POSTGRES_DB=wreeto_db
+POSTGRES_DB=wreeto_dev
 POSTGRES_PORT=5432
 RACK_ENV=production
 RAILS_ENV=production
@@ -10,5 +10,5 @@ REDIS_HOST=redis
 REDIS_PASSWORD=
 SMTP_USERNAME=
 SMTP_PASSWORD=
-WREETO_HOST=localhost
+WREETO_HOST=192.168.144.39
 WREETO_PORT=8383
