Tweak backup settings

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,12 +1,13 @@
-POSTGRES_HOST=postgres
-POSTGRES_USER=wreeto_admin
-POSTGRES_PASSWORD=wreeto_password
+ENCRYPTION_KEY=0d9f5796221d3fe2d9a42123ad4c5efa
+POSTGRES_HOST=localhost
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 POSTGRES_DB=wreeto_db
 POSTGRES_PORT=5432
-RACK_ENV=production
-RAILS_ENV=production
+RACK_ENV=development
+RAILS_ENV=development
 RAILS_MASTER_KEY=f21ab619787e22f6cb13d3884ca20d78
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PASSWORD=
 SMTP_USERNAME=
 SMTP_PASSWORD=
