--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,7 @@ services:
       - .:/app/wreeto
       - ./public/assets:/app/wreeto/public/assets
       - ./storage:/app/storage
+      - ./backup:/app/backup
     ports:
       - 8383:8383
     depends_on:
