--- a/config/database.docker.yml
+++ b/config/database.docker.yml
@@ -17,6 +17,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: postgres
+  host: localhost
   database: wreeto_test
 
 production:
