Setup dev tools and fix seeds

--- a/.env.development.local
+++ b/.env.development.local
@@ -1,7 +1,7 @@
 ENCRYPTION_KEY=0d9f5796221d3fe2d9a42123ad4c5efa
 POSTGRES_HOST=localhost
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_USER=wreeto_admin
+POSTGRES_PASSWORD=wreeto_password
 POSTGRES_DB=wreeto_db
 POSTGRES_PORT=5432
 RACK_ENV=development
