--- a/.env.development.local
+++ b/.env.development.local
@@ -1,9 +1,9 @@
 ENCRYPTION_KEY=0d9f5796221d3fe2d9a42123ad4c5efa
 POSTGRES_HOST=localhost
-POSTGRES_USER=wreeto_admin
-POSTGRES_PASSWORD=wreeto_password
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=wreeto_db
-POSTGRES_PORT=5432
+POSTGRES_PORT=5435
 RACK_ENV=development
 RAILS_ENV=development
 RAILS_MASTER_KEY=f21ab619787e22f6cb13d3884ca20d78
