--- a/test/fixtures/taggings.yml
+++ b/test/fixtures/taggings.yml
@@ -1,9 +1,2 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  note: one
-  tag: first
-
-two:
-  note: two
-  tag: second
+tagging_1:
+  tag: tag_one
