--- a/.env.development.local
+++ b/.env.development.local
@@ -34,12 +34,12 @@ REDIS_URL=redis://redis:6379/0
 DEVISE_MAIL_SENDER="yourdomain.com <info@yourdomain.com>"
 
 # =--= GOOGLE 
-GOOGLE_SECRET=
-GOOGLE_ID=
+GOOGLE_SECRET=abcdefg
+GOOGLE_ID=abcdefg
 
 # =--= OAUTH 
 OAUTH_FULL_HOST=yourdomain.com
 
 # =--= RECAPTCHA 
-RECAPTCHA_SITE_KEY=
-RECAPTCHA_SECRET_KEY= 
+RECAPTCHA_SITE_KEY=abcdefg
+RECAPTCHA_SECRET_KEY=abcdefg
